   anaglyph glasses (aka red/blue) compatible images.

Interfaces:
 * configurable password for the HTTP server.
 * .hosts removed from the HTTP server.
 * fixed Lua command line interface console mode under Windows.

Mac OS X Interface:
 * added a GUI for the QTSound access module to process audio captured locally

Removed modules:
 * portaudio audio output


Changes between 2.0.0 and 2.0.1:
--------------------------------

Access:
 * fix and improve the CDDB information retrieval
 * fix the samba module compilation
 * fix UDP / RTP multicast stream reception on Mac OS X when using the 10.7 SDK
 * multiple fixes for HLS support, notably on Win32 and for encryption
 * multiple fixes for Bluray discs playback
 * fix for DVD decryption on some RPC-I drives

Codecs:
 * Support for MXPEG files
 * limit auto-detected threads to 4 in avcodec module
 * fix quicktime audio codecs in RTSP streams

Demuxers:
 * Fix multi-file splitted RAR archive support
 * Fix a crash when seeking in mka
 * Improve MKV multi-video tracks support

Muxers:
 * Fix ogm header creation

Audio filters:
 * limit spatializer filter distortions
 * Use fastest SinC algorithm for samplerate module

Audio output:
 * Fix S/PDIF passthrough with ALSA.
 * Remove flawed ALSA channels autodetection.
   The available ALSA channels MUST be configured now (stereo by default).
 * Fix delay when changing the volume on Mac OS X

Video filters:
 * Fix gradfun unloading on Windows platform

Mac OS X interface:
 * allow to hide the playlist to get a small controller window
 * allow to hide the sidebar
 * disable Lion fullscreen mode by default, since its behavior is misleading
   - this fixes fullscreen video output on a secondary screen
 * noticebly faster launch time
 * correct a few visual glitches and accessibility support
 * re-enable visual feedback on seek and volume changes
 * improve track synchronization panel
 * fix fontconfig cache dialog, closure of the interface and numerous crashes